--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,19 +1,35 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Inscription
+{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+	<div class="container">
+		<h1>Inscription</h1>
 
-    {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+		{{ form_errors(registrationForm) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+		{{ form_start(registrationForm) }}
+		{{ form_row(registrationForm.fistName) }}
+
+		{{ form_row(registrationForm.lastName) }}
+
+		{{ form_row(registrationForm.email) }}
+
+		{{ form_row(registrationForm.picture) }}
+		{{ form_row(registrationForm.plainPassword) }}
+		{# {{ form_row(registrationForm.passwordConfirm) }} #}
+
+		{{ form_row(registrationForm.introduction) }}
+
+		{{ form_row(registrationForm.description) }}
+
+		{{ form_row(registrationForm.agreeTerms) }}
+
+		<button type="submit" class="btn btn-success mt-4">Valider</button>
+		{{ form_end(registrationForm) }}
+	</div>
+
 {% endblock %}
+
