--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="{{path('app_home')}}">SimImmo</a>
@@ -36,7 +35,7 @@
 							<a href="{{path('app_reservations')}}" class="dropdown-item">Mes reservations</a>
 
 
-							<a href="{{path('app_profile')}}" class="dropdown-item">Modifier mon profil</a>
+							{# <a href="{{path('app_profile')}}" class="dropdown-item">Modifier mon profil</a> #}
 							<div class="dropdown-divider"></div>
 
 							<a href="{{path('app_logout')}}" class="dropdown-item">Deconnexion</a>
@@ -64,4 +63,3 @@
 		</div>
 	</div>
 </nav>
-
