--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -35,7 +35,7 @@
 							<a href="{{path('app_reservations')}}" class="dropdown-item">Mes reservations</a>
 
 
-							{# <a href="{{path('app_profile')}}" class="dropdown-item">Modifier mon profil</a> #}
+							<a href="{{path('app_profile')}}" class="dropdown-item">Modifier mon profil</a>
 							<div class="dropdown-divider"></div>
 
 							<a href="{{path('app_logout')}}" class="dropdown-item">Deconnexion</a>
