--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -25,10 +25,9 @@
 				{% if user is same as(app.user) %}
 
 
-					<div
-						class="mt-3">
-						{# <a href="{{ path('app_profile') }}" class="btn btn-primary">Modifier mes informations</a> #}
-						{# <a href="{{ path('app_maj-mot-de-passe') }}" class="btn btn-primary">Modifier mon mot de passe</a> #}
+					<div class="mt-3">
+						<a href="{{ path('app_profile') }}" class="btn btn-primary">Modifier mes informations</a>
+						<a href="{{ path('app_maj-mot-de-passe') }}" class="btn btn-primary">Modifier mon mot de passe</a>
 
 
 					</div>
